--- a/web.config
+++ b/web.config
@@ -6,21 +6,21 @@
 <configuration>
 	<connectionStrings>   
     <!--<add name="BikeTourConnectionString" connectionString="Data Source=46.163.68.242;Initial Catalog=BikeTour;Uid=tde;Password=Dreamz2013!;Pooling=False;" providerName="System.Data.SqlClient"/>-->
-     <!--<add name="BikeTourConnectionString" connectionString="Data Source=46.163.68.242;Initial Catalog=BikeTour;Uid=tde;Password=Dreamz2013!;Pooling=False;" providerName="System.Data.SqlClient"/>-->
+     <add name="BikeTourConnectionString" connectionString="Data Source=46.163.68.242;Initial Catalog=BikeTour;Uid=tde;Password=Dreamz2013!;Pooling=False;" providerName="System.Data.SqlClient"/>
     <!--<add name ="BikeTourConnectionString" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=BikeTour; Integrated Security=True;" providerName="System.Data.SqlClient"/>-->
     <!--<add name="BikeTourConnectionString" connectionString="Data Source=192.168.0.2;Initial Catalog=Bike;uid=mainserver;pwd=MainServer;Pooling=False;" providerName="System.Data.SqlClient"/>-->
     <!--<add name="BikeTourConnectionString" connectionString="Data Source=74.50.126.60;Initial Catalog=BikeTour;uid=mainserver;pwd=MainServer;Pooling=False;" providerName="System.Data.SqlClient"/>-->
-  <add name="BikeTourConnectionString" connectionString="Data Source=USER-PC;Initial Catalog=BikeTourPROD;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+  <!--<add name="BikeTourConnectionString" connectionString="Data Source=USER-PC;Initial Catalog=BikeTourPROD;Integrated Security=True;" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
 	<appSettings>
     <add key="BatchStartDate" value="10/05/2015"></add>
-		<add key="AdminEmail" value ="info@tourdeeurope.de"/>
-    <add key="SupportEmail" value="student.waseem@gmail.com"/>
+		<add key="AdminEmail" value ="info@tourdeeurope.eu"/>
+    <add key="SupportEmail" value="info@tourdeeurope.eu"/>
     <add key="SupportPassword" value="inquilab"/>
-    <add key="SupportSMTP" value="mail.tourdeeurope.de"/>
+    <add key="SupportSMTP" value="wp261.webpack.hosteurope.de"/>
     <add key="Email" value="info@tourdeeurope.de"/>
 		<add key="Password" value="Dreamz2013!"/>
-		<add key="EnableSsl" value="True"/>
+		<add key="EnableSsl" value="False"/>
 		<add key="Smtp" value="mail.tourdeeurope.de"/>
     <add key="EmailDisplayName" value="BikeTour"/>
 		<add key="ForgotPasswordMailSubject" value="BikeTour User Account"/>
