--- a/web.config
+++ b/web.config
@@ -16,7 +16,7 @@
     <add key="BatchStartDate" value="10/05/2015"></add>
 		<add key="AdminEmail" value ="info@tourdeeurope.eu"/>
     <add key="SupportEmail" value="info@tourdeeurope.eu"/>
-    <add key="SupportPassword" value="inquilab"/>
+    <add key="SupportPassword" value="PanHL8832"/>
     <add key="SupportSMTP" value="wp261.webpack.hosteurope.de"/>
     <add key="Email" value="info@tourdeeurope.de"/>
 		<add key="Password" value="Dreamz2013!"/>
