Email issue fixed and code updated on all pages including support, forgot password and Contactus

--- a/web.config
+++ b/web.config
@@ -18,9 +18,10 @@
     <add key="SupportEmail" value="info@tourdeeurope.eu"/>
     <add key="SupportPassword" value="PanHL8832"/>
     <add key="SupportSMTP" value="wp261.webpack.hosteurope.de"/>
+    <add key="SupportSMTPUsername" value="wp11220933-196947"/>
     <add key="Email" value="info@tourdeeurope.de"/>
 		<add key="Password" value="Dreamz2013!"/>
-		<add key="EnableSsl" value="False"/>
+		<add key="EnableSsl" value="True"/>
 		<add key="Smtp" value="mail.tourdeeurope.de"/>
     <add key="EmailDisplayName" value="BikeTour"/>
 		<add key="ForgotPasswordMailSubject" value="BikeTour User Account"/>
