adding browser Update for issues related to IE10 11 and any other latest browser.
Edited code in city Admin to allow multiple admins to a single class.

--- a/web.config
+++ b/web.config
@@ -41,8 +41,8 @@
      decryptionKey="ED525F3E16763A3ECBC85046BBB367484DA791A217059E59"
       validation="SHA1" decryption="AES"
     />
-    <sessionState mode="StateServer" stateConnectionString="tcpip=127.0.0.1:42424" timeout="120"/>
-    <!--<sessionState timeout="7200"></sessionState>-->
+    <!--<sessionState mode="StateServer" stateConnectionString="tcpip=127.0.0.1:42424" timeout="120"/>-->
+    <sessionState timeout="7200"></sessionState>
     <globalization culture="de-DE" uiCulture="de-DE"/>
     <customErrors mode="Off"></customErrors>
         <pages>
