dynamic setting of width for bars

--- a/WebApp/web.config
+++ b/WebApp/web.config
@@ -6,11 +6,11 @@
 <configuration>
 	<connectionStrings>   
     <!--<add name="BikeTourConnectionString" connectionString="Data Source=nikhilladdha.com;Initial Catalog=biketour;Uid=biketour;Password=dexterity2016!;Pooling=False;" providerName="System.Data.SqlClient"/>-->
-     <!--<add name="BikeTourConnectionString" connectionString="Data Source=46.163.68.242;Initial Catalog=BikeTour;Uid=tde;Password=Dreamz2013!;Pooling=False;" providerName="System.Data.SqlClient"/>-->
+     <add name="BikeTourConnectionString" connectionString="Data Source=46.163.68.242;Initial Catalog=BikeTour;Uid=tde;Password=Dreamz2013!;Pooling=False;" providerName="System.Data.SqlClient"/>
     <!--<add name ="BikeTourConnectionString" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=BikeTour; Integrated Security=True;" providerName="System.Data.SqlClient"/>-->
     <!--<add name="BikeTourConnectionString" connectionString="Data Source=192.168.0.2;Initial Catalog=Bike;uid=mainserver;pwd=MainServer;Pooling=False;" providerName="System.Data.SqlClient"/>-->
     <!--<add name="BikeTourConnectionString" connectionString="Data Source=74.50.126.60;Initial Catalog=BikeTour;uid=mainserver;pwd=MainServer;Pooling=False;" providerName="System.Data.SqlClient"/>-->
-		<add name="BikeTourConnectionString" connectionString="Data Source=USER-PC;Initial Catalog=BikeTour_PROD;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+		<!--<add name="BikeTourConnectionString" connectionString="Data Source=USER-PC;Initial Catalog=BikeTour_PROD;Integrated Security=True;" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
 	<appSettings>
     <add key="BatchStartDate" value="10/05/2015"></add>
