changes made in scripts

--- a/WebApp/web.config
+++ b/WebApp/web.config
@@ -4,9 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<connectionStrings>   
-    <!--<add name="BikeTourConnectionString" connectionString="Data Source=nikhilladdha.com;Initial Catalog=biketour;Uid=biketour;Password=dexterity2016!;Pooling=False;" providerName="System.Data.SqlClient"/>-->
-     <add name="BikeTourConnectionString" connectionString="Data Source=46.163.68.242;Initial Catalog=BikeTour;Uid=tde;Password=Dreamz2013!;Pooling=False;" providerName="System.Data.SqlClient"/>
+	<connectionStrings>
+    <add name="BikeTourConnectionString" connectionString="Data Source=nikhilladdha.com;Initial Catalog=biketour;Uid=biketour;Password=dexterity2016!;Pooling=False;" providerName="System.Data.SqlClient"/>
+     <!--<add name="BikeTourConnectionString" connectionString="Data Source=46.163.68.242;Initial Catalog=BikeTour;Uid=tde;Password=Dreamz2013!;Pooling=False;" providerName="System.Data.SqlClient"/>-->
     <!--<add name ="BikeTourConnectionString" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=BikeTour; Integrated Security=True;" providerName="System.Data.SqlClient"/>-->
     <!--<add name="BikeTourConnectionString" connectionString="Data Source=192.168.0.2;Initial Catalog=Bike;uid=mainserver;pwd=MainServer;Pooling=False;" providerName="System.Data.SqlClient"/>-->
     <!--<add name="BikeTourConnectionString" connectionString="Data Source=74.50.126.60;Initial Catalog=BikeTour;uid=mainserver;pwd=MainServer;Pooling=False;" providerName="System.Data.SqlClient"/>-->
@@ -52,7 +52,7 @@
             </controls>
         </pages>
 		<authentication mode="Forms">
-			<forms defaultUrl="ControlPanel/Home.aspx" loginUrl="StartPage.aspx"></forms>
+			<forms defaultUrl="ControlPanel/Home.aspx" loginUrl="Default.aspx"></forms>
 		</authentication>
 		<compilation debug="true" targetFramework="4.0">
 			<assemblies>
