--- a/WebApp/web.config
+++ b/WebApp/web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
 	<connectionStrings>
-    <add name="BikeTourConnectionString" connectionString="Data Source=nikhilladdha.com;Initial Catalog=biketour;Uid=biketour;Password=dexterity2016!;Pooling=False;" providerName="System.Data.SqlClient"/>
-     <!--<add name="BikeTourConnectionString" connectionString="Data Source=46.163.68.242;Initial Catalog=BikeTour;Uid=tde;Password=Dreamz2013!;Pooling=False;" providerName="System.Data.SqlClient"/>-->
+    <!--<add name="BikeTourConnectionString" connectionString="Data Source=nikhilladdha.com;Initial Catalog=biketour;Uid=biketour;Password=dexterity2016!;Pooling=False;" providerName="System.Data.SqlClient"/>-->
+     <add name="BikeTourConnectionString" connectionString="Data Source=46.163.68.242;Initial Catalog=BikeTour;Uid=tde;Password=Dreamz2013!;Pooling=False;" providerName="System.Data.SqlClient"/>
     <!--<add name ="BikeTourConnectionString" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=BikeTour; Integrated Security=True;" providerName="System.Data.SqlClient"/>-->
     <!--<add name="BikeTourConnectionString" connectionString="Data Source=192.168.0.2;Initial Catalog=Bike;uid=mainserver;pwd=MainServer;Pooling=False;" providerName="System.Data.SqlClient"/>-->
     <!--<add name="BikeTourConnectionString" connectionString="Data Source=74.50.126.60;Initial Catalog=BikeTour;uid=mainserver;pwd=MainServer;Pooling=False;" providerName="System.Data.SqlClient"/>-->
