New Publish Files

--- a/BikeTourPublishFiles_18Jul2016/web.config
+++ b/BikeTourPublishFiles_18Jul2016/web.config
@@ -42,7 +42,7 @@
       validation="SHA1" decryption="AES"
     />
 		
-     <sessionState mode="StateServer" stateConnectionString="tcpip=127.0.0.1:42424" timeout="120"/>
+ <!--    <sessionState mode="StateServer" stateConnectionString="tcpip=127.0.0.1:42424" timeout="120"/>-->
 		<!--   <sessionState timeout="7200"></sessionState> -->
     <globalization culture="de-DE" uiCulture="de-DE"/>
 		 <customErrors mode="Off"></customErrors>
