Google API v2 converted to v3.

--- a/WebApp/web.config
+++ b/WebApp/web.config
@@ -25,6 +25,7 @@
 		<add key="Smtp" value="mail.tourdeeurope.de"/>
     <add key="EmailDisplayName" value="BikeTour"/>
 		<add key="ForgotPasswordMailSubject" value="BikeTour User Account"/>
+    <add key="GoogleAPIKey" value="AIzaSyDetlkvxZH1BC9pwVVj-9b7n2-WZ4jQMgQ"/>
     
 		<add key="AppAdmin" value="AppAdmin/HomePage.aspx"/>
 		<add key="CityAdmin" value="CityAdmin/HomePage.aspx"/>
